@@ -4,3 +4,4 @@ MANIFEST
 README
 Makefile.PL
 t/tree.t
+t/no_coord.t
