@@ -9,6 +9,9 @@ TreeGraph is able to draw the following items:
 - shortcuts arrow: an arrow to represent a shortcut between 2 nodes from
   different branches.
 
+Starting from version 1.007, all coordinates are handled by the object.
+Hence drawing the tree is much simpler.
+
 Suggested DSLI line in the Ptk module list:
 
 Tk::TreeGraph bdpO  Widget to draw a tree in a Canvas    DDUMONT
