@@ -1,3 +1,8 @@
+1999-02-11  Dominique Dumont  <domi@barrayar.grenoble.hp.com>
+
+	* TreeGraph.pm (addNode): coordinate are now handled by the 
+	object
+
 1999-01-25  Dominique Dumont  <domi@barrayar.grenoble.hp.com>
 
 	* TreeGraph.pm : fixed shortCut and unselectNodes problems
